# ambz2_sdk

./: .gitignore  .gitmodules  MATTER.md  MATTER_PORTING.md  te8_status.md  te9_status.md
component/common/api/: lwip_netconf.c
component/common/api/at_cmd/: atcmd_bt.c  atcmd_sys.c  atcmd_wifi.c
component/common/api/network/include/: lwipopts.h
component/common/api/wifi/: wifi_conf.c
component/common/bluetooth/realtek/sdk/board/amebaz2/src/: bt_board.h  rtk_coex.h
component/common/bluetooth/realtek/sdk/board/amebaz2/src/hci/: hci_board.c
component/common/bluetooth/realtek/sdk/example/bt_matter_adapter/: bt_matter_adapter_app_main.c  bt_matter_adapter_app_main.h  bt_matter_adapter_app_task.c  bt_matter_adapter_app_task.h  bt_matter_adapter_peripheral_app.c  bt_matter_adapter_peripheral_app.h  bt_matter_adapter_service.c  bt_matter_adapter_service.h
component/common/bluetooth/realtek/sdk/example/bt_mesh/api/: bt_mesh_user_api.c
component/common/bluetooth/realtek/sdk/example/bt_mesh/api/device/: bt_mesh_device_api.c
component/common/bluetooth/realtek/sdk/example/bt_mesh/api/provisioner/: bt_mesh_provisioner_api.c
component/common/bluetooth/realtek/sdk/example/bt_mesh/device/: bt_mesh_device_app_flags.h  bt_mesh_device_app_main.c  bt_mesh_device_app_task.c  device_app.c  device_app.h
component/common/bluetooth/realtek/sdk/example/bt_mesh/lib/cmd/: client_cmd.c  mesh_cmd.c  mesh_user_cmd_parse.h  misc_cmd.c
component/common/bluetooth/realtek/sdk/example/bt_mesh/lib/common/: dfu_updater_app.c  dfudep_service.c  ping_app.c  rmt_prov_client_app.c  rmt_prov_client_app.h  scene_server_app.h  scheduler_server_app.c  scheduler_server_app.h
component/common/bluetooth/realtek/sdk/example/bt_mesh/lib/gap/: gap_scheduler.h
component/common/bluetooth/realtek/sdk/example/bt_mesh/lib/inc/: friendship_lpn.h  mesh_common.h  mesh_transport.h  provision_adv.h
component/common/bluetooth/realtek/sdk/example/bt_mesh/lib/model/: blob_transfer.h  blob_transfer_client.c  delay_execution.c  generic_admin_property_server.c  generic_battery_client.c  generic_battery_server.c  generic_client_property_server.c  generic_default_transition_time_client.c  generic_default_transition_time_server.c  generic_level_client.c  generic_level_server.c  generic_location_client.c  generic_location_server.c  generic_location_setup_server.c  (+30 more)
component/common/bluetooth/realtek/sdk/example/bt_mesh/provisioner/: bt_mesh_provisioner_app_flags.h  bt_mesh_provisioner_app_main.c  bt_mesh_provisioner_app_task.c  provisioner_app.c  provisioner_app.h  provisioner_cmd.c
component/common/bluetooth/realtek/sdk/example/bt_mesh_multiple_profile/bt_mesh_device_matter/: bt_mesh_device_matter_adapter_service.c  bt_mesh_device_matter_adapter_service.h  bt_mesh_device_matter_app.c  bt_mesh_device_matter_app.h  bt_mesh_device_matter_app_flags.h  bt_mesh_device_matter_app_main.c  bt_mesh_device_matter_app_main.h  bt_mesh_device_matter_app_task.c  bt_mesh_device_matter_app_task.h  bt_mesh_device_matter_cmd.c  bt_mesh_device_matter_cmd.h
component/common/bluetooth/realtek/sdk/inc/app/: app_common_flags.h
component/common/drivers/wlan/realtek/include/: drv_types.h  wifi_constants.h
component/common/example/: example_entry.c
component/common/example/matter_task/: example_matter.c
component/common/example/wlan_fast_connect/: example_wlan_fast_connect.c
component/common/file_system/dct/: dct.h
component/common/file_system/ftl/: ftl.c  ftl.h
component/common/mbed/hal_ext/: flash_api.h  gpio_irq_ex_api.h  spdio_api.h  sys_api.h
component/common/mbed/targets/hal/rtl8710c/: flash_api.c  spi_api.c  sys_api.c
component/common/network/lwip/lwip_v2.0.2/port/realtek/freertos/: ethernetif.c
component/common/network/ssl/ssl_func_stubs/: ssl_func_stubs.c
component/common/network/ssl/ssl_func_stubs/rom/: rom_ssl_func_stubs.h
component/common/utilities/: chip_porting.c  chip_porting.h  ssl_client.c  tcptest.c
component/os/freertos/freertos_v10.0.1/Source/: tasks.c
component/os/freertos/freertos_v10.0.1/Source/include/: portable.h  task.h
component/os/freertos/freertos_v10.0.1/Source/portable/MemMang/: heap_5.c
component/soc/realtek/8710c/app/rtl_printf/include/: diag.h
component/soc/realtek/8710c/cmsis/rtl8710c/include/: basic_types.h
component/soc/realtek/8710c/cmsis/rtl8710c/source/ram_s/: app_start.c
component/soc/realtek/8710c/fwlib/include/: hal_i2c.h  hal_pwm.h  hal_timer.h  rtl8710c_pwm.h  rtl8710c_spic.h  rtl8710c_timer.h
component/soc/realtek/8710c/misc/driver/: efuse_logical_api.h
component/soc/realtek/8710c/misc/platform/: ota_8710c.c  ota_8710c.h
component/soc/realtek/8710c/misc/utilities/include/: strproc.h  utility.h
component/soc/realtek/8710c/misc/utilities/source/ram/: libc_wrap.c
project/realtek_amebaz2_v0_example/EWARM-RELEASE/: Project_is.eww  application_is.ewp  lib_chip_main.ewp
project/realtek_amebaz2_v0_example/GCC-RELEASE/: Makefile  ameba_zap_cluster_list.py  application.is.mk  build.sh  chef_helper.mk  lib_chip.mk  lib_chip_chef_core.mk  lib_chip_chef_main.mk  lib_chip_extended-color-light_core.mk  lib_chip_extended-color-light_main.mk  lib_chip_heating-cooling-unit_core.mk  lib_chip_heating-cooling-unit_main.mk  lib_chip_hvac_core.mk  lib_chip_hvac_main.mk  lib_chip_light_core.mk  lib_chip_light_main.mk  lib_chip_main.mk  lib_chip_otar_core.mk  lib_chip_otar_main.mk  lib_chip_switch_core.mk  lib_chip_switch_main.mk  lib_chip_thermostat_core.mk  lib_chip_thermostat_main.mk  partition.json  rtl8710c_ram.ld
project/realtek_amebaz2_v0_example/GCC-RELEASE/cmake/: CMakeLists.txt  includepath.cmake  toolchain.cmake
project/realtek_amebaz2_v0_example/GCC-RELEASE/cmake/application_ntz/: .includepath.cmake.swp  CMakeLists.txt
project/realtek_amebaz2_v0_example/inc/: FreeRTOSConfig.h  platform_opts.h  platform_opts_bt.h
project/realtek_amebaz2_v0_example/src/: main.c
tools/AmebaZ2/Image_Tool_Linux/: README.md  README.txt
tools/AmebaZ2/Image_Tool_MacOS/MacOS_v10/: README.txt
tools/AmebaZ2/Image_Tool_MacOS/MacOS_v11/: README.txt
tools/matter/: gen-certs.sh
(+9 files in other folders)
